--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,10 @@ code {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 }
 
 .main {
-  /* text-align: center; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -77,7 +75,7 @@ code {
   min-width: 180px;
   padding: 15px;
   margin: 15px;
-  background-color: #e6e0c9;
+  background-color: #ffc41d;
 }
 .card-info p {
   margin-bottom: 0;
@@ -95,4 +93,17 @@ code {
 /************ Search ************/
 .search-form {
   margin-bottom: 25px;
+}
+
+input {
+  padding: 0.2rem 0.5rem;
+  border-radius: 5px;
+  border-width: 1px;
+  margin-right: 5px;
+}
+
+button[type="submit"] {
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 0.2rem 0.5rem;
 }
