--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,8 @@ header {
 
 .card .img {
   border: 1px solid red;
-  margin: 15px 15px;
+  margin: 15px;
+  padding: 15px;
   background-color: #fffb49;
   border-radius: 5px;
   border: none;
