--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@ header {
 .card .img {
   border: 1px solid red;
   margin: 15px;
-  padding: 15px;
+  padding: 15px 35px;
   background-color: #fffb49;
   border-radius: 5px;
   border: none;
